shawns first effort

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <section>
         <nav>
-            <img src="./assets/FES.svg" alt=""
+            <img src="./assets/FES.svg" alt="">
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#discord">Discord</a></li>
@@ -22,12 +22,12 @@
                 <button>Start now</button>
             </div>
             <figure>
-                <img src="./assets/laptop.png" alt="home page image"
+                <img src="./assets/laptop.png" alt="home page image">
             </figure>
         </header>
     </section>
     <main>
-        <section id="about"></section>
+        <section id="about">
         <h2>About</h2>
         <div>
             <p>
@@ -35,9 +35,30 @@
             </p>
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro ipsa placeat mollitia repellendus illo eos optio maiores officiis dolores corrupti, exercitationem totam, voluptatibus fuga esse, labore quis autem dolorum perferendis.</p>   
         </div>
+        <figure>
+            <img src="./assets/about.jpg" alt="About">
+        </figure>
+    </section>
         <section id="discord"></section>
+        <h2>Discord</h2>
+        <figure>
+            <img src="./assets/discord.png" alt="Discord">
+        </figure>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis blanditiis consequatur unde, qui ut voluptatum dignissimos quod ex optio quasi dicta veritatis ipsum quidem sed praesentium et facere in fuga</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe, aliquam incidunt. Iusto odio omnis maxime nesciunt minima sit corporis quasi ipsa eligendi adipisci! Voluptatum itaque eius nulla nam repudiandae labore.</p>
 
-        <section id="contact"></section>
+        </div>
+        
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <form action="">
+                <label>Email</label>
+                <input type="text" placeholder="jane@example.com">
+                <label>Message</label>
+            </form>   
+        </section>
     </main>
     </body>
 </html>
