--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <section>
         <nav>
-            <img src="./assets/FES.svg" alt="">
+            <img src="./assets/FES.svg" class="logo" alt="">
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#discord">Discord</a></li>
@@ -17,13 +18,15 @@
         </nav>
         <header>
             <div>
+            <div>
                 <h1>Best place to learn rontend</h1>
-                <p>go rom being an absolute beginner to a professional</p>
+                <p class="subheader" from being an absolute beginner to a professional</p>
                 <button>Start now</button>
             </div>
             <figure>
                 <img src="./assets/laptop.png" alt="home page image">
             </figure>
+            </div>
         </header>
     </section>
     <main>
@@ -60,5 +63,16 @@
             </form>   
         </section>
     </main>
+    
+    <footer>
+        <img src="./assets/FES.svg" alt="">
+        <div>
+            <a href="#about">About</a>
+            <a href="#discord">Discord</a>
+            <a href="#contact">Contact</a>
+            <a href="#">Courses</a>
+        </div>
+        <p>Copyright Frontend Simplified</p>
+    </footer>
     </body>
 </html>
