--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             </ul>
         </nav>
         <header>
-            <div>
+            <div class="row">
             <div>
                 <h1>Best place to learn rontend</h1>
-                <p class="subheader" from being an absolute beginner to a professional</p>
+                <p class="subheader" from being an absolute beginner to a professional></p>
                 <button>Start now</button>
             </div>
             <figure>
@@ -32,7 +32,8 @@
     <main>
         <section id="about">
         <h2>About</h2>
-        <div>
+        <div class="section__description">
+            <div>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint reprehenderit amet iusto modi tempora laudantium, inventore ipsum pariatur assumenda veniam optio dignissimos quae? Quia, assumenda mollitia deleniti distinctio dolor facilis!
             </p>
@@ -41,6 +42,7 @@
         <figure>
             <img src="./assets/about.jpg" alt="About">
         </figure>
+        </div>
     </section>
         <section id="discord"></section>
         <h2>Discord</h2>
